First LSTM architecture

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -968,7 +968,7 @@
    "source": [
     "### Missing numbers\n",
     "\n",
-    "There are many missing values in UPDRS IV. There are also many in UPD23b, but this is not a target variable."
+    "There are many missing values in UPDRS IV. There are also many in UPD23b, but this is not a target variable. Let's remove the NaNs in UPDRS IV and drop UPD23b."
    ]
   },
   {
